--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@
 	}
 
 	body {
-		background: #02160a;
+		background: #ebfaf1;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -147,7 +147,7 @@
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		color: rgba(255, 255, 255, 0.75);
 		text-decoration: none;
-		border-bottom: 1px dotted;
+		border-bottom: none;
 		outline: 0;
 	}
 
@@ -509,6 +509,16 @@
 
 	input[type="radio"] + label:before {
 		border-radius: 100%;
+	}
+
+	/* CHECKED STYLES */
+	[type=radio]:checked + img {
+		outline: 2px solid rgba(3, 202, 86, 0.897);
+	}
+
+	/* IMAGE STYLES */
+	[type=radio] + img {
+		cursor: pointer;
 	}
 
 	::-webkit-input-placeholder {
@@ -1336,7 +1346,7 @@
 /* Main */
 
 	#main {
-		padding: 4em 0 2em 0;
+		padding: 6em 0 2em 0;
 	}
 
 		@media screen and (max-width: 736px) {
@@ -1360,6 +1370,63 @@
 				}
 
 			}
+			.main {
+				margin-top: 30px; /* Add a top margin to avoid content overlay */
+			  }
+
+/* Add a black background color to the top navigation bar */
+.topnav {
+	overflow: hidden;
+	background-color: #e9e9e9;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+	float: right;
+	display: block;
+	color: black;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+  
+  /* Style the "active" element to highlight the current page */
+  .topnav a.active {
+	background-color: #2196F3;
+	color: white;
+  }
+  
+  /* Style the search box inside the navigation bar */
+  .topnav input[type=text] {
+	float: right;
+	padding: 6px;
+	border: none;
+	margin-top: 8px;
+	margin-right: 16px;
+	font-size: 17px;
+  }
+  
+  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+  @media screen and (max-width: 600px) {
+	.topnav a, .topnav input[type=text] {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	  width: 100%;
+	  margin: 0;
+	  padding: 14px;
+	}
+	.topnav input[type=text] {
+	  border: 1px solid #ccc;
+	}
+  }
 
 /* Footer */
 
